--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "http://jonskulski.net" # the base hostname & protocol for your site
 twitter_username: jonskulski
 github_username:  jskulski
 medium_username: jonskulski
+devto_username: jskulski
 
 # Build settings
 markdown: kramdown
